<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.treinetic.whiteshark.fragments.BookPublishFragment">

    <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"

                    android:scaleType="fitCenter" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"

                    >

                <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30sp"

                        android:text="@string/become_author_1"
                        android:textColor="@color/colorProfileList" />

                <com.codesgood.views.JustifiedTextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/become_author_2"

                        android:textColor="@color/colorProfileList" />

                <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"

                        android:text="@string/become_author_3"
                        android:textColor="@color/colorProfileList" />

                <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/become_author_4"
                        android:textColor="@color/colorProfileList" />

                <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"

                        android:text="@string/become_author_5"
                        android:textColor="@color/colorProfileList" />

                <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/become_author_email"
                        android:textColor="@color/colorPrimary" />

                <TextView
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="30dp"
                        android:gravity="center"
                        android:text="@string/become_author_contact"
                        android:textColor="@color/colorPrimary"

                        />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</FrameLayout>