<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:padding="10dp"
              android:gravity="center_horizontal">

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/download_icon"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/book_being_downloaded"
              android:textColor="@color/colorBlack"
              android:textSize="14sp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/waiting_for_files"
              android:textSize="12sp"
              android:layout_marginTop="5dp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:orientation="vertical"
                  android:gravity="center">
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"/>
    </LinearLayout>

    <TextView
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_download"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/product_sans_bold"/>
</LinearLayout>