<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.treinetic.whiteshark.fragments.AboutFragment">

    <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/logo3" />

            <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_email"
                    android:textColor="@color/whiteTone2"
                    android:textSize="12sp" />

            <ImageView
                    android:id="@+id/socialIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/fb_social_icon" />


<!--            <com.codesgood.views.JustifiedTextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:padding="10dp"-->
<!--                    android:text="@string/about_description_1"-->
<!--                    android:textAlignment="textStart"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="12sp" />-->

            <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:text="@string/about_desc_1"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="10dp"
                    android:text="@string/about_desc_2"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="10dp"
                    android:text="@string/about_desc_3"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="Gurulugomi Team"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"

                    />

            <TextView
                    android:id="@+id/phone1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="+94 112 323 126"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/phone2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text=" +94 768 296 536"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">


                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/solution_by"
                        android:textColor="@color/whiteTone2"
                        android:textSize="12sp" />

                <ImageView
                        android:id="@+id/trLogo"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:src="@drawable/treinetic_logo" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/treinetic"
                        android:textAlignment="center"
                        android:textColor="@color/whiteTone2"
                        android:textSize="12sp" />

                <TextView
                        android:id="@+id/treineticWeb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/treinetic_email"
                        android:textAlignment="center"
                        android:textColor="@color/whiteTone2"
                        android:textSize="12sp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <!--    </LinearLayout>-->

</FrameLayout>